board application done

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,7 @@
                 <a href="/team">TEAM</a>
                 <a href="/members">MEMBERSHIP</a>
                 <a href="/events">EVENTS</a>
+                <a href="/board">BOARD-APP</a>
                 <% if (typeof user === 'object' && user.isAdmin === true) { %>
                     <a href="/manage">MANAGE</a>
                 <% } %>
@@ -53,6 +54,7 @@
             <a href="/team">TEAM</a>
             <a href="/members">MEMBERSHIP</a>
             <a href="/events">EVENTS</a>
+            <a href="/board">BOARD-APP</a>
             <% if (typeof user === 'object' && user.isAdmin === true) { %>
                 <a href="/manage">MANAGE</a>
             <% } %>
