suggestions created and saved

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,6 +36,7 @@
                     <a href="/manage">MANAGE</a>
                 <% } %>
                 <a href="/contact">CONTACT</a>
+                <a href="/suggestions">SUGGESTIONS</a>
                 <% if (!(typeof user === 'object')) { %>
                     <a href="/login">LOGIN</a>
                 <% } else { %>
@@ -59,6 +60,7 @@
                 <a href="/manage">MANAGE</a>
             <% } %>
             <a href="/contact">CONTACT</a>
+            <a href="/suggestions">SUGGESTIONS</a>
             <% if (!(typeof user === 'object')) { %>
                 <a href="/login">LOGIN</a>
             <% } else { %>
