adding made with love statement

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-        <footer><small>&copy; Copyright <%= new Date().getFullYear() %>, Saudi Student Association @ GT</small></footer>
+        <footer><small>&copy; Copyright <%= new Date().getFullYear() %>, SSA @ GT — Made with &#10084;&#65039; by <a href="https://amj.codes">amj</a></small></footer>
         <script type="text/javascript">
             function rotateIcon(x) {
                 x.classList.toggle("change");
