--- a/public/style.css
+++ b/public/style.css
@@ -230,6 +230,7 @@ main form textarea {
 
     main {
         text-align: center;
+        padding: 30px 25px;
     }
 }
 
@@ -366,21 +367,15 @@ main form input[type="submit"] {
 
 @media only screen and (max-width: 600px) {
     #banner div h2 {
-        font-size: 50px;
-    }
-
-    #banner div img {
-        width: 200px;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    #banner div h2 {
         font-size: 30px;
     }
 
     #banner div img {
         width: 150px;
+    }
+
+    #banner {
+        padding: 0 25px;
     }
 }
 
@@ -486,4 +481,5 @@ footer {
     left: 50%;
     transform: translateX(-50%);
     background: transparent;
+    width: fit-content;
 }
