centering group photo

--- a/public/style.css
+++ b/public/style.css
@@ -146,6 +146,7 @@ header div {
         url("group.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
