--- a/views/boardApp.ejs
+++ b/views/boardApp.ejs
@@ -9,7 +9,7 @@
         >Loading…</iframe
     >
     <img
-        src="SSA.png"
+        src="SSA.webp"
         alt="logo"
         style="margin: 50px auto; display: block; width: 300px"
     />
