--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
             <h3>Saudi Student Association at Georgia Tech</h3>
         </div>
         <div>
-            <img src="SSA.png" alt="logo" />
+            <img src="SSA.webp" alt="logo" />
         </div>
     </div>
 </div>
