--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,7 @@
         the necessary information needed. Our members come from
         different backgrounds and are in a variety of disciplines.
     </p>
-    <img src="SSA.png" alt="logo" style="margin: 50px auto; display: block; width: 300px;">
+    <img src="SSA.webp" alt="logo" style="margin: 50px auto; display: block; width: 300px;">
 </main>
 
 <%- include ("partials/footer") %>
