--- a/views/team.ejs
+++ b/views/team.ejs
@@ -4,32 +4,32 @@
     <h2>Team</h2>
     <section class="grid-section">
         <div>
-            <img src="person.png" alt="avatar">
+            <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
-            <img src="person.png" alt="avatar">
+            <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
-            <img src="person.png" alt="avatar">
+            <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
-            <img src="person.png" alt="avatar">
+            <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
-            <img src="person.png" alt="avatar">
+            <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
     </section>
-    <img src="SSA.png" alt="logo" style="margin: 50px auto; display: block; width: 300px;">
+    <img src="SSA.webp" alt="logo" style="margin: 50px auto; display: block; width: 300px;">
 </main>
 
 <%- include ("partials/footer") %>
