--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -23,6 +23,13 @@
         </section>
         <input type="submit">
     </form>
+    <h2>Join us!</h2>
+    <iframe
+        src="https://docs.google.com/forms/d/e/1FAIpQLScqw9_ul0SuqYfGC9Tzio98ZoC76Ph9IMp95yHUaZa-pK8oWA/viewform?embedded=true"
+        style="width: 80%; height: 500px; margin: 50px auto;"
+        title="Board Application"
+        >Loading…</iframe
+    >
 </main>
 
 <%- include ("partials/footer") %>
