--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 
 <main>
     <h2>About</h2>
-    <p>
+    <p style="margin: 30px;">
         The Saudi Student Association at Georgia Tech was founded in
         2020 to provide a welcoming environment for Saudi students to
         connect with their heritage. We aim to connect with Saudi
@@ -10,6 +10,34 @@
         the necessary information needed. Our members come from
         different backgrounds and are in a variety of disciplines.
     </p>
+    <h2>Team</h2>
+    <section class="grid-section">
+        <div>
+            <img src="person.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+        </div>
+        <div>
+            <img src="person.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+        </div>
+        <div>
+            <img src="person.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+        </div>
+        <div>
+            <img src="person.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+        </div>
+        <div>
+            <img src="person.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+        </div>
+    </section>
     <img src="SSA.webp" alt="logo" style="margin: 50px auto; display: block; width: 300px;">
 </main>
 
