--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <div>
         <div>
             <h2>All is One, One is All.</h2>
-            <h3>Saudi Student Association at Georgia Tech</h3>
+            <h3>Saudi Student Association at Georgia Institute of Technology</h3>
         </div>
         <div>
             <img src="SSA.webp" alt="logo" />
