--- a/public/style.css
+++ b/public/style.css
@@ -461,6 +461,10 @@ main > section div {
     text-align: center;
 }
 
+main > section div h4 {
+    color: #999;
+}
+
 main > section table {
     width: 100%;
     margin-top: 30px;
