--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,26 +15,37 @@
         <div>
             <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <h4>President</h4>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
             <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <h4>President</h4>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
             <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <h4>President</h4>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
             <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <h4>President</h4>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
         <div>
             <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <h4>President</h4>
+            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+        </div>
+        <div>
+            <img src="person.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <h4>President</h4>
             <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
         </div>
     </section>
