--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -1,7 +1,8 @@
 <%- include ("partials/header") %>
 
 <main>
-    <h2>Membership</h2>
+    <h2>Join Us!</h2>
+    <h4>To become a member, please fill this information.</h4>
     <form action="/members" method="POST" enctype="application/x-www-form-urlencoded">
         <section>
             <div>
