--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,43 +10,37 @@
         the necessary information needed. Our members come from
         different backgrounds and are in a variety of disciplines.
     </p>
-    <h2>Team</h2>
+    <h2 style="margin-top: 80px;">Executive Board 2021 - 2022</h2>
     <section class="grid-section">
         <div>
-            <img src="person.webp" alt="avatar">
-            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
+            <img src="Picture3.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Lama Bahanan</h3>
             <h4>President</h4>
-            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+            <p style="font-size: 16px;">I am a biomedical engineering student minoring in leadership studies (business track). I am always up for new adventures, some of the things I have tried; scuba diving, skydiving, cascading and caving! </p>
         </div>
         <div>
             <img src="person.webp" alt="avatar">
-            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
-            <h4>President</h4>
-            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+            <h3 style="font-size: 20px;">Lina Alharthi</h3>
+            <h4>Vice President</h4>
+            <p style="font-size: 16px;">A chemical engineer in the making who loves baking and planning things. I am a proud mother of a tuxedo cat named “Meme”.</p>
         </div>
         <div>
             <img src="person.webp" alt="avatar">
-            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
-            <h4>President</h4>
-            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+            <h3 style="font-size: 20px;">Mohammed Kousa</h3>
+            <h4>Treasurer</h4>
+            <p style="font-size: 16px;">I am a simple guy who thinks bricks are cool. As such I have dedicated my life to study the</p>
         </div>
         <div>
-            <img src="person.webp" alt="avatar">
-            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
-            <h4>President</h4>
-            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+            <img src="Picture2.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdulghafoor Tifoni</h3>
+            <h4>Secretary</h4>
+            <p style="font-size: 16px;">The first thing I did when I turned 18 was not getting a driver's license. I jumped out of a fudging plane at 15000ft with nothing but goggles and a parachute attached to an instructor. I believe people should not seek happiness, but rather seek satisfaction and contentment; the former is usually only temporary.</p>
         </div>
         <div>
-            <img src="person.webp" alt="avatar">
-            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
-            <h4>President</h4>
-            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
-        </div>
-        <div>
-            <img src="person.webp" alt="avatar">
-            <h3 style="font-size: 20px;">Abdullah AlJasser</h3>
-            <h4>President</h4>
-            <p style="font-size: 16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a felis libero. Vestibulum erat mauris, mattis vel dolor eget, euismod scelerisque ipsum. Pellentesque non neque ut libero bibendum dapibus. Maecenas.</p>
+            <img src="Picture1.webp" alt="avatar">
+            <h3 style="font-size: 20px;">Abdulaziz Memesh</h3>
+            <h4>Liaison Officer</h4>
+            <p style="font-size: 16px;">I am a second-year Computer Science student specializing in the Intelligence and Theory threads. I’m interested in all things data because I like to improve/optimize management, processes, and anything really that can be improved. I enjoy listening to music a lot! Lately, I’ve been listening to Focus by Bazzi way too many times. As a board member of the Saudi Student Association, my responsibilities include managing our instagram account and our website among other responsibilities shared by all board members.</p>
         </div>
     </section>
     <img src="SSA.webp" alt="logo" style="margin: 50px auto; display: block; width: 300px;">
