--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,7 +19,7 @@
             <p style="font-size: 16px;">I am a biomedical engineering student minoring in leadership studies (business track). I am always up for new adventures, some of the things I have tried; scuba diving, skydiving, cascading and caving! </p>
         </div>
         <div>
-            <img src="picture4.webp" alt="avatar">
+            <img src="Picture4.webp" alt="avatar">
             <h3 style="font-size: 20px;">Lina Alharthi</h3>
             <h4>Vice President</h4>
             <p style="font-size: 16px;">A chemical engineer in the making who loves baking and planning things. I am a proud mother of a tuxedo cat named “Meme”.</p>
