--- a/views/about.ejs
+++ b/views/about.ejs
@@ -28,7 +28,11 @@
             <img src="person.webp" alt="avatar">
             <h3 style="font-size: 20px;">Mohammed Kousa</h3>
             <h4>Treasurer</h4>
-            <p style="font-size: 16px;">I am a simple guy who thinks bricks are cool. As such I have dedicated my life to study the</p>
+            <p style="font-size: 16px;">
+                Salam! I am studying material science engineering with interest in water filtration.
+                In my free time I like to read novels, manga and webtoons.
+                I enjoy boulder climbing and creating connections with people.
+            </p>
         </div>
         <div>
             <img src="Picture2.webp" alt="avatar">
