--- a/public/style.css
+++ b/public/style.css
@@ -254,7 +254,7 @@ main form label {
     margin-bottom: 10px;
 }
 
-main form input {
+main form input, main form select {
     border-radius: 5px;
     width: 300px;
     height: 30px;
