--- a/public/style.css
+++ b/public/style.css
@@ -305,10 +305,6 @@ main form input[type="submit"] {
     cursor: pointer;
 }
 
-.card:hover .img {
-    min-width: 100%;
-}
-
 .card .img {
     height: 100%;
     min-width: 400px;
@@ -415,12 +411,12 @@ main form input[type="submit"] {
 
 .card .overlay section {
     margin-top: 20px;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     overflow-y: scroll;
     max-height: calc(100% - 59px);
     padding-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .card .overlay .rsvp {
@@ -447,6 +443,7 @@ main form input[type="submit"] {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    margin: 20px 30px;
 }
 
 main > section {
